--- a/src/styles/Page Styles/About.module.css
+++ b/src/styles/Page Styles/About.module.css
@@ -24,7 +24,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: url('/Images/About Slider Images/Slider_Image_1.jpg') center/cover;
+  background: url('/Images/About Slider Images/ASEAM_AP-7.jpg') center/cover;
   opacity: 0.3;
   z-index: 1;
 }
